--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
 		    "passwd": "",
 		    "unix_socket": "/u1/vbar/mysql/thesock",
 		    "cursorclass": "SSCursor"
-		   }
+		   },
+ "numtop": 250
 }
